Add module level metrics